--- a/ShowUnderline.glyphsPlugin/Contents/Info.plist
+++ b/ShowUnderline.glyphsPlugin/Contents/Info.plist
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
@@ -28,8 +28,6 @@
 	<string>Fixed missing underline in Edit View.</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright, GeorgSeifert, 2016</string>
-	<key>NSMainNibFile</key>
-	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>ShowUnderline</string>
 	<key>PyMainFileNames</key>
